Support newer java versions (11+). Add argLine to permit access to base api. Switch to new JDK Cleaner.